# otp-client

./: .gitignore  Pipfile  run-emqx.sh
src/: README.md  client.py  ecdh.py  ecdh_scratch.py  test_proxy.py
src/automation/: simulate.py
src/graph/: 2x_prob_model.py  prob_model.py
src/mqtt/: ecdh.py  mqtt-client.py  mqtt-sensor.py  signals.py
src/otp_conn/: Cargo.toml  connector_test.py  install.sh  pyproject.toml
src/otp_conn/src/: lib.rs
src/proxy/: client.py  helpers.py  main.py  otp.py  parser.py  proxy.py  server.py  test.py
src/proxy/tests/: test.py
src/samples/: excel_helper.py  results.json  results.txt  sample_parser.py
src/samples/H_seven/: duplicates.json  results.json  sample1.txt  sample10.txt  sample11.txt  sample12.txt  sample13.txt  sample14.txt  sample15.txt  sample16.txt  sample17.txt  sample18.txt  sample19.txt  sample2.txt  sample20.txt  sample21.txt  sample22.txt  sample23.txt  sample24.txt  sample25.txt  sample26.txt  sample27.txt  sample28.txt  sample29.txt  sample3.txt  sample30.txt  sample31.txt  sample32.txt  sample33.txt  sample34.txt  sample35.txt  sample36.txt  sample37.txt  sample38.txt  sample39.txt  sample4.txt  sample40.txt  sample41.txt  sample42.txt  sample43.txt  (+12 more)
src/samples/H_seven.old/: sample1.txt  sample10.txt  sample2.txt  sample3.txt  sample4.txt  sample5.txt  sample6.txt  sample7.txt  sample8.txt  sample9.txt
src/samples/a_10000_n_128_h_7/: sample1.txt  sample10.txt  sample11.txt  sample12.txt  sample13.txt  sample14.txt  sample2.txt  sample3.txt  sample4.txt  sample5.txt  sample6.txt  sample7.txt  sample8.txt  (+1 more)
(+430 files in other folders)
